# trochilus

./: CMakeLists.txt  Makefile  README.md  trls_base.h  trls_config.h  trls_list.c  trls_list.h  trls_queue.h  trls_test.c
src/core/: trls_queue.c  trls_queue.h  trls_str.h
src/include/: trls_base.h  trls_sys.h
src/trls_cunit_test/trls_cunit/: Makefile  cunit_trls_queue.c  trls_cunit.c  trls_cunit.h
